[Crash][Editing] Pressing enter on LI element triggers assertion in Shadow DOM. https://bugs.webkit.org/show_bug.cgi?id=89171

Reviewed by Ryosuke Niwa.

Source/WebCore:

Since modidying Shadow DOM removes renderer of elements in Shadow DOM and shadow host,
assertion to check the existence of renderer was triggered.

We should update layout here to create renderer again.

Test: editing/shadow/pressing-enter-on-list.html

* editing/CompositeEditCommand.cpp:
(WebCore::CompositeEditCommand::appendBlockPlaceholder):

LayoutTests:

* editing/shadow/pressing-enter-on-list-expected.txt: Added.
* editing/shadow/pressing-enter-on-list.html: Added.


Canonical link: https://commits.webkit.org/107521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120931 268f45cc-cd09-0410-ab3c-d52691b4dbfc